<resources>
    <string name="app_name">zooo</string>
    <string name="sendero_1">Trail Asia</string>
    <string name="sendero_2">Trail Africa </string>
    <string name="sendero_3">Trail Antartica </string>
    <string name="sendero_4">Trail Aquarium</string>
    <string name="sendero_5">Trail Reptile</string>
    <string name="Asia">Los animales en Asia cuentan con una muy buena representación en el Zoo. En instalaciones como el Instalación de Tigres (con especies como el soberbio Tigre de Bengala) o el Instalación de Osos, donde se exhiben dos tipos de oso: el Oso malayo (Helarctos malayanus) y el Oso tibetano. El Tapir malayo, el bellísimo Panda rojo y el enigmático Ciervo del Padre David son otras especies asiáticas que se encuentran a lo largo del recorrido.</string>
    <string name="cient">Científicos del
Zoológico en Acción:
Panteras Nebulosas</string>
    <string name="cienti">Las panteras nebulosas sonfelinos medianos (llegan a
pesar entre 20 a 50 libras en
edad adulta) que se encuentran
en los bosques del sudeste
de Asia, un hábitat que está
desapareciendo con rapidez.
Son tímidas y, por lo tanto, es
muy difícil estudiarlas en estado
salvaje.  </string>
    <string name="aqu">La diversidad de las especies que existen en el Aquarium contribuye a que el gran público pueda conocer ejemplares cuyo exotismo les mantiene en el “anonimato” más absoluto. Ocurre con el Pez Pipa Mula, que llegó aquí para compartir hogar con un pariente próximo, el Caballito de Mar Mediterráneo (el Hippocampus guttulatus), y es un experto en camuflarse entre los vegetales submarinos. Tortugas carey o tortugas bobas, o la muy longeva Tortuga verde (procedente de América Central y el Caribe), son familias de animales que pueden verse en el acuario</string>
    <string name="acu">Si hay un animal que fascina y aterra al mismo tiempo al ser humano, ése es el tiburón. Así, el acuario reserva a esta especie un tanque para deleite del público; tiburones grises (cuyas primeras crías en cautividad nacieron en 2002, dentro de la instalación), o el Tiburón Toro. Como el resto de escualos, carece de vejiga natatoria, pero es capaz de tragar aire y llenar así su estómago a modo de órgano hidrostático. </string>
    <string name="shar">Científicos del
Zoológico en Acción:
Tiburones</string>
    <string name="jj">Científicos del
Zoológico en Acción:
Jirafa</string>
    <string name="afr">Si te gustan las aventuras extremas, el Zoológico te brinda una experiencia más donde tendrás que poner alerta tus cinco sentidos ya que podrás vivir una nueva forma de ver animales de uno de los continentes que pese a ser el tercero más extenso, es de los más pobres, África.
Esta experiencia se llama Safari Masai Mara para el cual se ha recreado una sabana africana en un espacio de ocho hectáreas con especies animales características de este ecosistema, que permanecen en total libertad.</string>
    <string name="jir">La jirafa es el animal terrestre más alto que existe. La altura promedio es de 5 m. en machos y de 4m., en las hembras, aunque se ha encontrado ejemplares que han medido hasta 6 m. El cuello es largo, los miembros anteriores son mayores que los posteriores, las orejas son puntiagudas y presentan de 2 a 5 cuernos, 2 frontales, uno nasal por lo regular y otro par en la frente.</string>
    <string name="antar">Antártida, el reino de los pingüinos, alberga ejemplares de la especie Adelie y Gentoo. Estos animales habitan en la parte más fría de dicho continente.
En Antártida, el público podrá apreciar las bajas temperaturas y sentir qué tan frío es un témpano de hielo, también tendrá la posibilidad de interactuar con una orca mediante realidad virtual.</string>
    <string name="pingu">Científicos del
Zoológico en Acción:
Pinguinos Adelia</string>
    <string name="ping">El pingüino adelia es, junto con el pingüino emperador, una de las dos únicas especies de pingüinos que viven en el continente antártico, propiamente. Esta especie es común a lo largo de toda la costa antártica e islas cercanas.
Mide de 60 a 70 cm de longitud y pesa alrededor de 4 kg.</string>
<string name="repti">Los reptiles son animales tetrápodos que se caracterizan por tener su piel cubierta de escamas, excepto las aves, cuya piel está cubierta principalmente de plumas. Las tortugas, cocodrilos, caimanes, serpientes, lagartijas, anfisbénidos y tuatara son los reptiles no voladores que viven en nuestro planeta en la actualidad. Las aves, los parientes más cercanos de los cocodrilos y caimanes, son reptiles voladores, pero al ser un grupo tan distinto a los demás reptiles no se incluyen en este portal.Los reptiles se originaron hace más de 300 millones de años, y desde la antigüedad han tenido una estrecha relación con el ser humano. Por ejemplo, las serpientes han sido dioses y personajes mitológicos importantes en culturas como la egipcia, griega, o azteca. </string>
    <string name="cc">Científicos del Zoológico en Acción: Cocodrilos</string>
    <string name="coo">De tamaño medio, a pesar de que los machos pueden llegar a medir casi 4 metros, en general no se consideran peligrosos para las personas. Es uno de los cocodrilos más amenazados en estado salvaje, aunque está muy extendido en cautividad, ya que se cría para obtener su valiosa piel.</string>
    <string name="titu">RULES</string>
    <string name="rules">Si se siente enfermo o tiene síntomas como tos, dificultad para respirar, fiebre, dolores musculares, náuseas o vómitos, diarrea, pérdida reciente del gusto o del olfato, o cualquier síntoma parecido a la gripe antes de la visita, quédese en casa.</string>
    <string name="rule2">Se require usar mascarilla para todos los visitantes de 2 años y mayores en áreas  públicas que están en el interior de un edificio, incluyendo el LAIR, las tiendas y lugares de servicio de alimentos, baños y el Safari Shuttle.  Las directrices de la Ciudad de Los Ángeles recomienda a los visitantes que no están completamente vacunados que también usen mascarilla afuera.</string>
    <string name="rule3">Para proteger a nuestra comunidad y animales, recomendamos usar una mascarilla y mantener una distancia física de al menos 6 pies entre usted y otros miembros del personal del zoológico y los invitados que no están en su grupo.</string>
    <string name="rule4">Recuerde lavarse las manos con frecuencia, durante al menos 20 segundos, y no se toque los ojos, la nariz o la boca.</string>
</resources>